--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Fotomatic</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,18 +43,20 @@
 	</section>
 
 <!-- WHAT WE OFFER SECTION -->
-	<section class="we-offer">
-		<div class="hand">
-			<img src="./resources/images/feature-1.png" alt="Camera Lens"/>
-			<h2>Advanced, automatic, instant</h2>
-			<p>Shutter speed, aperture and flash output adjust automatically</p>
-		</div>
-		<div class="camera">
-			<img src="./resources/images/feature-2.png" alt="Vintage Camera"/>
-			<h2>Beautifully crafted inside-out</h2>
-			<p>From the paint outside to the tiny screw inside. Format is crafted with love and 20 year of expertise</p>
-		</div>
-	</section>
+	<main>
+		<section class="we-offer">
+			<div class="hand">
+				<img src="./resources/images/feature-1.png" alt="Camera Lens"/>
+				<h2>Advanced, automatic, instant</h2>
+				<p>Shutter speed, aperture and flash output adjust automatically</p>
+			</div>
+			<div class="camera">
+				<img src="./resources/images/feature-2.png" alt="Vintage Camera"/>
+				<h2>Beautifully crafted inside-out</h2>
+				<p>From the paint outside to the tiny screw inside. Format is crafted with love and 20 year of expertise</p>
+			</div>
+		</section>
+	</main>
 
 <!-- FILTERS SECTION -->
 	<section class="filters">
