CSS changed media max-width to 768

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 				</li>
 			</ul>
 		</nav>
+		<!-- MOBILE NAV -->
+		 <nav>
+			<img src="./resources/images/ic-about-us.svg"/>
+		 </nav>
+
 	</header>
 
 <!-- HERO SECTION -->
