--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <!-- HEADER SECTION  -->
 	<header>
-		<nav>
+		<nav class="desktop-nav">
 			<div class="logo"><h1><a href="index.html">Fotomatic</a></h1></div>
 			<ul>
 				<li><a href="#">Product Detail</a></li>
@@ -30,9 +30,13 @@
 				</li>
 			</ul>
 		</nav>
-		<!-- MOBILE NAV -->
-		 <nav>
-			<img src="./resources/images/ic-about-us.svg"/>
+
+		<!-- === MOBILE NAV === -->
+		 <nav class="mobile-nav">
+			<img src="./resources/images/ic-logo.svg" alt="Fotomatic logo uppercase F"/>
+			<img src="./resources/images/ic-product-detail.svg" alt="Camera logo"/>
+			<img src="./resources/images/ic-about-us.svg" alt="Two people logo"/>
+			<button>Join us</button>
 		 </nav>
 
 	</header>
@@ -48,19 +52,17 @@
 	</section>
 
 <!-- WHAT WE OFFER SECTION -->
-	<main>
-		<section class="we-offer">
-			<div class="hand">
-				<img src="./resources/images/feature-1.png" alt="Camera Lens"/>
-				<h2>Advanced, automatic, instant</h2>
-				<p>Shutter speed, aperture and flash output adjust automatically</p>
-			</div>
-			<div class="camera">
-				<img src="./resources/images/feature-2.png" alt="Vintage Camera"/>
-				<h2>Beautifully crafted inside-out</h2>
-				<p>From the paint outside to the tiny screw inside. Format is crafted with love and 20 year of expertise</p>
-			</div>
-		</section>
+	<main class="we-offer">
+		<div class="hand">
+			<img src="./resources/images/feature-1.png" alt="Camera Lens"/>
+			<h2>Advanced, automatic, instant</h2>
+			<p>Shutter speed, aperture and flash output adjust automatically</p>
+		</div>
+		<div class="camera">
+			<img src="./resources/images/feature-2.png" alt="Vintage Camera"/>
+			<h2>Beautifully crafted inside-out</h2>
+			<p>From the paint outside to the tiny screw inside. Format is crafted with love and 20 year of expertise</p>
+		</div>
 	</main>
 
 <!-- FILTERS SECTION -->
