HTML & CSS re-styled for WHAT WE OFFER section

--- a/index.html
+++ b/index.html
@@ -52,18 +52,24 @@
 	</section>
 
 <!-- WHAT WE OFFER SECTION -->
-	<main class="we-offer">
-		<div class="hand">
-			<img src="./resources/images/feature-1.png" alt="Camera Lens"/>
-			<h2>Advanced, automatic, instant</h2>
-			<p>Shutter speed, aperture and flash output adjust automatically</p>
-		</div>
-		<div class="camera">
-			<img src="./resources/images/feature-2.png" alt="Vintage Camera"/>
-			<h2>Beautifully crafted inside-out</h2>
-			<p>From the paint outside to the tiny screw inside. Format is crafted with love and 20 year of expertise</p>
-		</div>
-	</main>
+<main class="we-offer">
+  <div class="hand">
+    <img src="./resources/images/feature-1.png" alt="Camera Lens"/>
+    <div class="card-text">
+      <h2>Advanced, automatic, instant</h2>
+      <p>Shutter speed, aperture and flash output adjust automatically.</p>
+    </div>
+  </div>
+
+  <div class="camera">
+    <img src="./resources/images/feature-2.png" alt="Vintage Camera"/>
+    <div class="card-text">
+      <h2>Beautifully crafted inside-out</h2>
+      <p>From the paint outside to the tiny screw inside. Format is crafted with love and 20 year of expertise.</p>
+    </div>
+  </div>
+</main>
+
 
 <!-- FILTERS SECTION -->
 	<section class="filters">
