HTML added alt to last image, CSS re-styled filter's section for mobile

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <!-- QUOTE SECTION -->
 	<section class="recommend">
 		<h2>"It's truly something that could create a brand new photography Renaissance"</h2>
-		<img src="./resources/images/photography-logo.png"/> 
+		<img src="./resources/images/photography-logo.png" alt="Photography logo"/> 
 	</section>
 
 	<!-- FOOTER SECTION -->
